--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,16 @@
 @import "./reset.css";
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #ada4ee;
+}
+
+#root {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
